<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bs_repos"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/padding_large"
    android:paddingTop="@dimen/padding_extra_large"
    android:paddingEnd="@dimen/padding_large"
    android:paddingBottom="@dimen/padding_extra_large">

    <TextView
        android:id="@+id/tv_header_updated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_last_updated"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_value_updated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Jul 6, 2017 12:15:11 AM" />

    <TextView
        android:id="@+id/tv_header_stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_large"
        android:text="@string/header_stars"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_header_updated" />

    <TextView
        android:id="@+id/tv_value_stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_value_updated"
        tools:text="8" />

    <TextView
        android:id="@+id/tv_header_forks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_large"
        android:text="@string/header_forks"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_header_stars" />

    <TextView
        android:id="@+id/tv_value_forks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_value_stars"
        tools:text="24" />

</androidx.constraintlayout.widget.ConstraintLayout>